--- a/mobile/app/src/main/res/layout/activity_login.xml
+++ b/mobile/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/bg_background"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,36 +15,32 @@
         android:gravity="center"
         android:background="@drawable/bg_background">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="90dp">
-
-            <View
-                android:id="@+id/vector"
-                android:layout_width="156dp"
-                android:layout_height="15dp"
-                android:layout_marginTop="137dp"
-                android:background="@drawable/v_underline"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.300"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/log_in_label" />
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="50dp">
 
             <TextView
                 android:id="@+id/log_in_label"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="39dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="59dp"
                 android:text="@string/baner_label"
                 android:textAppearance="@style/simple_label"
                 android:textSize="30sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_alignParentStart="true"
+                />
+
+            <View
+                android:id="@+id/vector"
+                android:layout_width="156dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="-10dp"
+                android:layout_below="@+id/log_in_label"
+                android:background="@drawable/v_underline" />
+
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/email_reg_tv"
@@ -107,17 +106,10 @@
             android:textAppearance="@style/simple_button"
             android:background="@drawable/btn_simple" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/no_account_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/no_account_text"
-                android:textAppearance="@style/simple_label"
-                android:textColor="@color/light_gray"
-                android:textSize="18sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
 
             <TextView
                 android:id="@+id/sign_up_label"
@@ -127,10 +119,18 @@
                 android:text="@string/sign_up_text"
                 android:textAppearance="@style/simple_label_bold"
                 android:textColor="@drawable/btn_text"
+                android:textSize="18sp"
+                android:layout_toEndOf="@+id/no_account_label"
+                />
+
+            <TextView
+                android:id="@+id/no_account_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_account_text"
+                android:textAppearance="@style/simple_label"
+                android:textColor="@color/light_gray"
                 android:textSize="18sp" />
-
-        </LinearLayout>
-
+        </RelativeLayout>
     </LinearLayout>
-
 </ScrollView>
