--- a/mobile/app/src/main/res/layout/activity_registration.xml
+++ b/mobile/app/src/main/res/layout/activity_registration.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -15,41 +14,31 @@
         android:orientation="vertical"
         android:gravity="center">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <View
-            android:id="@+id/vector"
-            android:layout_width="156dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="58dp"
-            android:background="@drawable/v_underline"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.858"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/sign_up_label" />
-
-        <TextView
-            android:id="@+id/sign_up_label"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="39dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="59dp"
-            android:text="@string/sign_up_label"
-            android:textAppearance="@style/simple_label"
-            android:textSize="48sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp">
+
+            <TextView
+                android:id="@+id/sign_up_label"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_up_label"
+                android:textAppearance="@style/simple_label"
+                android:textSize="40sp"
+                android:layout_alignParentStart="true" />
+
+            <View
+                android:id="@+id/vector"
+                android:layout_width="156dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="-10dp"
+                android:layout_below="@+id/sign_up_label"
+                android:layout_alignEnd="@+id/sign_up_label"
+                android:background="@drawable/v_underline" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/login_reg_tv"
