--- a/mobile/app/src/main/res/layout/activity_statistics.xml
+++ b/mobile/app/src/main/res/layout/activity_statistics.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
+<ScrollView
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:background="@drawable/bg_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -158,7 +153,5 @@
                 android:textAppearance="@style/simple_button"
                 android:textColor="@color/light_gray"
                 app:backgroundTint="@null" />
-
         </LinearLayout>
-    </LinearLayout>
 </ScrollView>
