--- a/mobile/app/src/main/res/layout/activity_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_wallet.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
+<ScrollView
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
@@ -8,18 +10,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="40dp"
+        android:layout_margin="20dp"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@drawable/bg_background">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="40dp"
-            android:layout_margin="20dp"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@drawable/bg_round_box_dark">
+        android:background="@drawable/bg_round_box_dark">
 
             <TextView
                 android:id="@+id/name_tv"
@@ -173,7 +168,8 @@
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragment_container_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:layout="@layout/fragment_members" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -272,7 +268,5 @@
                 android:textAppearance="@style/simple_button"
                 android:textColor="@color/light_gray"
                 app:backgroundTint="@null" />
-
-        </LinearLayout>
-        </LinearLayout>
+    </LinearLayout>
 </ScrollView>
