--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:gravity="center">
 
         <TextView
-            android:id="@+id/hello_label1"
+            android:id="@+id/hello_label"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/hello"
