--- a/mobile/app/src/main/res/layout/activity_edit_expense.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_expense.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:background="@drawable/bg_background">
 
     <LinearLayout
@@ -10,7 +11,6 @@
         android:orientation="vertical"
         android:gravity="center"
         android:padding="20dp"
-        android:layout_margin="20dp"
         android:background="@drawable/bg_round_box_dark">
 
         <TextView
