--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -132,13 +132,13 @@
                     android:text="@string/notifications"
                     android:textSize="24sp">
                 </TextView>
-                <Button
+                <ImageButton
                     android:id="@+id/open_notification_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:background="@drawable/btn_list_closed">
-                </Button>
+                </ImageButton>
             </LinearLayout>
 
             <View
