--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,7 +56,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   border-radius: 24px;
   border-color: transparent;
-  font-size: 20px !important;
+  
 }
 
 #mainbuttonstyle:hover{
@@ -68,6 +68,12 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
 }
+.grid-container-3{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
 
 #vector-image{
   background-image: url(headervector.svg);
@@ -96,7 +102,7 @@ input[type='text'], input[type='password']{
 
 .form-container{
   position: relative;
-  display: flex;
+ 
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
@@ -129,6 +135,12 @@ input[type='text'], input[type='password']{
   color:#e4850a;
 }
 
+.text-label{
+  color:#F8B500;
+  /*text-align: left;*/
+  text-decoration: none;
+  font-size: 1,5vw;
+}
 .form-button{
   width: 100%;
   display: block;
@@ -142,6 +154,102 @@ input[type='text'], input[type='password']{
   box-sizing: border-box;
 
 }
+.left-content{
+  text-align: left;
+  padding-top: 3%;
+  box-sizing: border-box;
+
+}
+.right-content{
+  text-align: right;
+  padding-top: 3%;
+  box-sizing: border-box;
+
+}
+
+.add-icon{
+  
+  background-image:url(add-icon.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 45px;
+  height: 45px;
+  border-color:transparent;
+  background-color: transparent;
+  
+  
+}
+
+.dropdown-arrow {
+  
+  
+  background-color: transparent;
+  border-color: transparent;
+  background-image:url(arrow.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 45px;
+  width: 45px;
+  margin-right: 0px;
+  margin-left:auto;
+  
+}
+.down-arrow {
+  
+  
+  background-color: transparent;
+  border-color: transparent;
+  background-image:url(arrow.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 45px;
+  width: 45px;
+  margin-right: 0px;
+  margin-left:auto;
+  transform: rotate(-90deg);
+}
+
+.up-arrow {
+  
+  
+  background-color: transparent;
+  border-color: transparent;
+  background-image:url(arrow.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 45px;
+  width: 45px;
+ 
+  transform: rotate(90deg);
+  
+}
+
+.click-to-hide-arrow{
+  transform: rotate(-90deg);
+}
+
+
+.width-100{
+  width: 100%;
+  
+}
+
+/*PLACEHOLDER PROFILE PICTURE*/
+.profile-picture{
+  background-image: url(profile_picture_placeholder.jpg);
+  background-size: 220px;
+  
+  height: 220px;
+  width: 220px;
+  border-radius:120px;
+  size:auto;
+  margin:auto;
+  
+  background-repeat: no-repeat;
+  
+  background-position: center;
+}
+
 
 @media all and (max-width: 1750px){ 
 
@@ -155,7 +263,7 @@ input[type='text'], input[type='password']{
     padding: 2px 10px;
     position: static;
     border-radius: 24px;
-    font-size: 30px !important;
+    
   }
    .nav-item{  
      font-size: 30px !important;
@@ -197,7 +305,7 @@ input[type='text'], input[type='password']{
     padding: 2px 10px;
     position: static;
     border-radius: 24px;
-    font-size: 30px !important;
+    
   }
    .nav-item{  
      font-size: 30px !important;
