--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -19,11 +19,105 @@ font-size: 90px;
     color: #F7F7F7;
     width: 100%;
     
-    background-color: #484848;
+    background-color: #444444;
     clear: both;
 }
 
+.box-content{
+    background-color: #484848;
+    border-radius: 24px;
+    margin-top: 20px;
+    padding: 20px;
+    margin-left:auto;
+    margin-right:auto;
+    color: #F7F7F7;
+    
+}
+.box-subcontent{
+    background-color: #606060;
+    padding:4%;
+    border-radius: 24px;
+    margin-top: 20px;
+}
+.box-subcontent-2{
+  background-color: #555555;
+  padding:4%;
+  border-radius: 24px;
+  margin-top: 20px;
+}
 
+.box-content-size50{
+  width:50%;
+}
+.box-content-size30{
+  width:30%;
+}
+.box-content-size150{
+  width:150%;
+}
+.text-color{
+  color: #F7F7F7;
+}
+.separator-line{
+  background-color:#F7F7F7;
+  border-radius: 24px;
+  width: auto;
+  height: 4px;
+  margin: 5px;
+  margin-bottom:20px;
+  margin-top:20px;
+}
+
+
+
+/*Checkboxes style*/
+.custom-radiobuttons input{  /*Ukrycie domyślenego radiobuttona */
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+
+}
+.checkmark {  /*Nowy styl*/
+    position: absolute;
+    
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
+    
+    margin-left:-35px;
+    margin-top:22px;
+  }
+/* Zmiana koloru pod kursorem */
+  .custom-radiobuttons:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+    /* Gdy checked dodanie koloru tła radiobuttona */
+  .custom-radiobuttons input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  /* Utworzenie zaznaczenia (kropki wewnątrz), ukryta gdy nie checked*/
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  /* Pokazanie zaznaczenia (kropki wewnątrz) gdy checked */
+  .custom-radiobuttons input:checked ~ .checkmark:after {
+    display: block;
+  }
+
+  /* Styl zaznaczenia (kropka wewnątrz) */
+  .custom-radiobuttons .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+  }
   @media only screen and (max-width: 1025px){ 
     .footer{  
         font-size: 25px;
