--- a/mobile/app/src/main/res/layout/item_member.xml
+++ b/mobile/app/src/main/res/layout/item_member.xml
@@ -18,28 +18,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/member_name_tv"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textAppearance="@style/simple_label"
-            android:textSize="20sp"
-            android:layout_marginHorizontal="5dp">
+            android:textSize="22sp"
+            android:layout_marginHorizontal="10dp">
         </TextView>
+
         <TextView
             android:id="@+id/member_balance_tv"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:textAppearance="@style/simple_label_bold"
-            android:textSize="18sp"
             android:textColor="@color/red"
-            android:layout_marginHorizontal="5dp">
-        </TextView>
+            android:textSize="20sp"/>
 
+        <Button
+            android:id="@+id/show_debth_btn"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:visibility="gone" />
     </LinearLayout>
 
     <LinearLayout
@@ -53,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="@style/simple_label_bold"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:text="@string/regulate"
             android:textColor="@color/yellow"
             android:visibility="gone"
@@ -65,13 +70,13 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="@style/simple_label_bold"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:visibility="gone"
             android:layout_marginHorizontal="10dp">
         </TextView>
 
         <Button
-            android:id="@+id/remeider_btn"
+            android:id="@+id/reminder_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginHorizontal="10dp"
