Add delete function for list and expense and function paydebt

--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="red">#E80E0E</color>
     <color name="light_red">#ED430A</color>
     <color name="green">#41C236</color>
+    <color name="red_error">#F55B5B</color>
 </resources>
