--- a/mobile/app/src/main/res/layout/item_notification_warning.xml
+++ b/mobile/app/src/main/res/layout/item_notification_warning.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="36sp"
+        android:textSize="30sp"
         android:text="@string/warning_debth"
         android:textColor="@color/red" />
 
@@ -70,6 +70,17 @@
         android:background="@drawable/btn_simple"
         android:layout_marginBottom="20dp"
         android:text="@string/go_to_expense"
+        android:textAppearance="@style/simple_button"
+        android:textColor="@color/light_gray"
+        app:backgroundTint="@null" />
+
+    <Button
+        android:id="@+id/delete_notification_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_simple"
+        android:layout_marginBottom="20dp"
+        android:text="@string/delete_notification"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
         app:backgroundTint="@null" />
