--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -81,43 +81,23 @@ font-size: 90px;
 }
 .checkmark {  /*Nowy styl*/
     position: absolute;
+    background-image: url(../radio-button-off.svg);
+    height: 40px;
+    width: 40px;
+   
     
-    height: 20px;
-    width: 20px;
-    background-color: #eee;
-    border-radius: 50%;
-    
-    margin-left:-35px;
-    margin-top:22px;
-  }
-/* Zmiana koloru pod kursorem */
-  .custom-radiobuttons:hover input ~ .checkmark {
-    background-color: #ccc;
-  }
-    /* Gdy checked dodanie koloru tła radiobuttona */
-  .custom-radiobuttons input:checked ~ .checkmark {
-    background-color: #2196F3;
-  }
-  /* Utworzenie zaznaczenia (kropki wewnątrz), ukryta gdy nie checked*/
-  .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  /* Pokazanie zaznaczenia (kropki wewnątrz) gdy checked */
-  .custom-radiobuttons input:checked ~ .checkmark:after {
-    display: block;
+    margin-left:-40px;
+    margin-top: 5px;
+   
   }
 
-  /* Styl zaznaczenia (kropka wewnątrz) */
-  .custom-radiobuttons .checkmark:after {
-    top: 9px;
-    left: 9px;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: white;
+    /* Gdy checked */
+  .custom-radiobuttons input:checked ~ .checkmark {
+    background-image: url(../radio-button-checked.svg);
   }
+  
+ 
+  
   @media only screen and (max-width: 1025px){ 
     .footer{  
         font-size: 25px;
