--- a/mobile/app/src/main/res/layout/activity_edit_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_wallet.xml
@@ -78,8 +78,17 @@
             android:id="@+id/update_wallet_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/btn_simple"
             android:text="@string/save_changes"
+            android:textAppearance="@style/simple_button" />
+
+        <Button
+            android:id="@+id/cancel_wallet_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_simple"
+            android:text="@string/cancel"
             android:textAppearance="@style/simple_button" />
 
     </LinearLayout>
