--- a/mobile/app/src/main/res/layout/activity_create_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_create_wallet.xml
@@ -97,8 +97,17 @@
             android:id="@+id/create_wallet_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/btn_simple"
             android:text="@string/create"
+            android:textAppearance="@style/simple_button" />
+
+        <Button
+            android:id="@+id/cancel_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_simple"
+            android:text="@string/cancel"
             android:textAppearance="@style/simple_button" />
 
     </LinearLayout>
