--- a/mobile/app/src/main/res/layout/item_user_search.xml
+++ b/mobile/app/src/main/res/layout/item_user_search.xml
@@ -16,10 +16,9 @@
     </TextView>
 
     <Button
-        android:id="@+id/add_user_btn"
+        android:id="@+id/user_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@drawable/btn_add_person" />
+        android:layout_marginHorizontal="20dp" />
 
 </LinearLayout>
