--- a/mobile/app/src/main/res/layout/activity_edit_list.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_list.xml
@@ -52,8 +52,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/btn_simple"
             android:text="@string/save_changes"
+            android:textAppearance="@style/simple_button" />
+
+        <Button
+            android:id="@+id/cancel_list_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/btn_simple"
+            android:text="@string/cancel"
             android:textAppearance="@style/simple_button" />
     </LinearLayout>
 </ScrollView>
