Init change image function

--- a/mobile/app/src/main/res/layout/activity_edit_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_profile.xml
@@ -64,7 +64,7 @@
             tools:ignore="RtlSymmetry" />
 
         <Button
-            android:id="@+id/save_changes_btn"
+            android:id="@+id/save_change_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
