Change button label

--- a/mobile/app/src/main/res/layout/item_notification_warning.xml
+++ b/mobile/app/src/main/res/layout/item_notification_warning.xml
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_simple"
         android:layout_marginBottom="20dp"
-        android:text="@string/go_to_expense"
+        android:text="@string/go_to_wallet"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
         app:backgroundTint="@null" />
