Select dates for stats

--- a/mobile/app/src/main/res/values/styles.xml
+++ b/mobile/app/src/main/res/values/styles.xml
@@ -28,4 +28,10 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="spinnerItemStyle" parent="android:Widget.TextView.SpinnerItem">
+    </style>
+
+    <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
+    </style>
+
 </resources>
