New login page, some fixes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -126,11 +126,13 @@
   overflow: hidden;
 }
 
-input[type='text'], input[type='password']{
+input[type='text'], input[type='password'], input[type='email']{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   border-radius: 24px;
   border-color: transparent;
 }
+
+
 
 .form-container{
   position: relative;
