--- a/mobile/app/src/main/res/layout/activity_expense.xml
+++ b/mobile/app/src/main/res/layout/activity_expense.xml
@@ -72,7 +72,6 @@
                 android:id="@+id/vector_3"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/v_line_white" />
 
@@ -80,7 +79,8 @@
                 android:id="@+id/receipt_iv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:adjustViewBounds="true"
+                android:layout_marginVertical="5dp"
                 />
 
           <LinearLayout
